jump bug fixed

--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 body {
   background-color: #000506;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 header {
